[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Sprites/Player Character/Player Character Default.png" type="Texture" id=1]
[ext_resource path="res://assets/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Player" type="Area2D" groups=[
"Player",
]]
position = Vector2( 8, 8 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
velocityModulations = [ Color( 1, 1, 1, 1 ), Color( 0.470588, 0.941176, 0.533333, 1 ), Color( 0.137255, 0.717647, 0.2, 1 ), Color( 0, 0.435294, 0.25098, 1 ), Color( 0.00392157, 0.184314, 0.12549, 1 ) ]
velocitySpeeds = [ 5, 7, 10, 13, 16 ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.0767381, 0.0767381 )
scale = Vector2( 0.990408, 0.990408 )
texture = ExtResource( 1 )
hframes = 4
frame = 2

[node name="MovementTween" type="Tween" parent="."]

[node name="MovementRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 0 )
collide_with_areas = true
[connection signal="tween_all_completed" from="MovementTween" to="." method="_on_MovementTween_tween_all_completed"]
